--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@lucia-auth/adapter-sqlite": "^2.0.1",
     "better-sqlite3": "^9.2.2",
     "classnames": "^2.5.1",
+    "export-to-csv": "^1.2.4",
     "kysely": "^0.27.1",
     "lucia": "^2.7.6",
     "uuid": "^9.0.1"
