--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   "type": "module",
   "dependencies": {
     "@lucia-auth/adapter-sqlite": "^2.0.1",
+    "atrament": "^4.1.0",
     "better-sqlite3": "^9.2.2",
     "canvas": "^2.11.2",
     "classnames": "^2.5.1",
