--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "export-to-csv": "^1.2.4",
     "kysely": "^0.27.1",
     "lucia": "^2.7.6",
+    "openai": "^4.53.2",
     "perfect-freehand": "^1.2.2",
     "resize-observer-polyfill": "^1.5.1",
     "uuid": "^9.0.1"
