--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "lucia": "^2.7.6",
     "openai": "^4.53.2",
     "perfect-freehand": "^1.2.2",
+    "playht": "^0.9.8",
     "resize-observer-polyfill": "^1.5.1",
     "stripe": "^16.6.0",
     "uuid": "^9.0.1"
