--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@stripe/stripe-js": "^4.1.0",
     "better-sqlite3": "^9.2.2",
     "classnames": "^2.5.1",
+    "easy-speech": "^2.3.1",
     "export-to-csv": "^1.2.4",
     "kysely": "^0.27.1",
     "lucia": "^2.7.6",
