--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "playht": "^0.9.8",
     "resize-observer-polyfill": "^1.5.1",
     "stripe": "^16.6.0",
+    "ts-node": "^10.9.2",
     "uuid": "^9.0.1"
   }
 }
