--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
     "@types/better-sqlite3": "^7.6.8",
     "@types/eslint": "8.56.0",
+    "@types/howler": "^2.2.12",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
@@ -47,12 +48,15 @@
   },
   "type": "module",
   "dependencies": {
+    "@11labs/client": "^0.0.1",
     "@lucia-auth/adapter-sqlite": "^2.0.1",
     "@stripe/stripe-js": "^4.1.0",
     "better-sqlite3": "^9.2.2",
     "classnames": "^2.5.1",
     "easy-speech": "^2.3.1",
+    "elevenlabs": "^0.18.0",
     "export-to-csv": "^1.2.4",
+    "howler": "^2.2.4",
     "kysely": "^0.27.1",
     "lucia": "^2.7.6",
     "openai": "^4.53.2",
