--- a/fly.toml
+++ b/fly.toml
@@ -11,7 +11,7 @@ primary_region = 'ewr'
 [http_service]
   internal_port = 5173
   force_https = true
-  auto_stop_machines = true
+  auto_stop_machines = false
   auto_start_machines = true
   min_machines_running = 0
   processes = ['app']
