add password reset

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/better-sqlite3": "^7.6.8",
     "@types/eslint": "8.56.0",
     "@types/howler": "^2.2.12",
+    "@types/nodemailer": "^6.4.17",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
@@ -59,6 +60,7 @@
     "howler": "^2.2.4",
     "kysely": "^0.27.1",
     "lucia": "^2.7.6",
+    "nodemailer": "^6.10.0",
     "openai": "^4.53.2",
     "perfect-freehand": "^1.2.2",
     "playht": "^0.9.8",
