--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
     "@types/better-sqlite3": "^7.6.8",
     "@types/eslint": "8.56.0",
+    "@types/fast-levenshtein": "^0.0.4",
     "@types/howler": "^2.2.12",
     "@types/nodemailer": "^6.4.17",
     "@types/uuid": "^9.0.8",
@@ -55,8 +56,9 @@
     "better-sqlite3": "^9.2.2",
     "classnames": "^2.5.1",
     "easy-speech": "^2.3.1",
-    "elevenlabs": "^0.18.0",
+    "elevenlabs": "^0.18.2",
     "export-to-csv": "^1.2.4",
+    "fast-levenshtein": "^3.0.0",
     "howler": "^2.2.4",
     "kysely": "^0.27.1",
     "lucia": "^2.7.6",
