--- a/package.json
+++ b/package.json
@@ -51,15 +51,18 @@
   "type": "module",
   "dependencies": {
     "@11labs/client": "^0.0.1",
+    "@distube/ytdl-core": "^4.15.9",
     "@lucia-auth/adapter-sqlite": "^2.0.1",
     "@lucia-auth/oauth": "^3.5.3",
     "@stripe/stripe-js": "^4.1.0",
+    "@types/fluent-ffmpeg": "^2.1.27",
     "better-sqlite3": "^9.2.2",
     "classnames": "^2.5.1",
     "easy-speech": "^2.3.1",
     "elevenlabs": "^0.18.2",
     "export-to-csv": "^1.2.4",
     "fast-levenshtein": "^3.0.0",
+    "fluent-ffmpeg": "^2.1.3",
     "howler": "^2.2.4",
     "kysely": "^0.27.1",
     "lucia": "^2.7.6",
@@ -70,6 +73,8 @@
     "resize-observer-polyfill": "^1.5.1",
     "stripe": "^16.6.0",
     "ts-node": "^10.9.2",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "youtube-transcript": "^1.2.1",
+    "ytdl-core": "^4.11.5"
   }
 }
