--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node build",
     "dev": "vite dev",
     "build": "vite build --mode development",
+    "build:mobile": "CAPACITOR=true vite build",
     "preview": "vite preview",
     "test": "npm run test:integration && npm run test:unit",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -20,13 +21,23 @@
     "sync:subscriptions": "vite-node scripts/sync-stripe-subscriptions.ts",
     "sync:subscriptions:dry": "vite-node scripts/sync-stripe-subscriptions.ts --dry-run",
     "populate:words": "vite-node scripts/populate-words.ts",
-    "populate:words:dry": "vite-node scripts/populate-words.ts --dry-run"
+    "populate:words:dry": "vite-node scripts/populate-words.ts --dry-run",
+    "cap:sync": "npm run build:mobile && npx cap sync",
+    "cap:ios": "npm run cap:sync && npx cap open ios",
+    "cap:android": "npm run cap:sync && npx cap open android",
+    "cap:add:ios": "npx cap add ios",
+    "cap:add:android": "npx cap add android"
   },
   "devDependencies": {
     "@flydotio/dockerfile": "^0.5.4",
     "@playwright/test": "^1.28.1",
+    "@capacitor/android": "^6.0.0",
+    "@capacitor/cli": "^6.0.0",
+    "@capacitor/core": "^6.0.0",
+    "@capacitor/ios": "^6.0.0",
     "@sveltejs/adapter-auto": "^3.0.0",
     "@sveltejs/adapter-node": "^5.0.1",
+    "@sveltejs/adapter-static": "^3.0.0",
     "@sveltejs/adapter-vercel": "^4.0.5",
     "@sveltejs/kit": "^2.5.27",
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
@@ -54,6 +65,7 @@
     "tslib": "^2.4.1",
     "typescript": "^5.5.0",
     "vite": "^5.4.4",
+    "vite-plugin-pwa": "^0.20.0",
     "vitest": "^1.0.0"
   },
   "type": "module",
