drop to gemini-2.5 for some stuff

--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "playht": "^0.9.8",
     "resize-observer-polyfill": "^1.5.1",
     "stripe": "^16.6.0",
+    "svelte-heatmap": "^1.0.2",
     "svelte-sonner": "^1.0.5",
     "ts-node": "^10.9.2",
     "uuid": "^9.0.1",
