--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.58.0",
     "@types/fluent-ffmpeg": "^2.1.27",
+    "@vercel/analytics": "^1.5.0",
     "ajv": "^8.12.0",
     "classnames": "^2.5.1",
     "dotenv": "^16.3.1",
