structured lesson paths

--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@11labs/client": "^0.0.1",
     "@distube/ytdl-core": "^4.15.9",
     "@google/genai": "^1.29.1",
+    "@google/generative-ai": "^0.24.1",
     "@lucia-auth/adapter-sqlite": "^2.0.1",
     "@lucia-auth/oauth": "^3.5.3",
     "@stripe/stripe-js": "^4.1.0",
