--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@supabase/supabase-js": "^2.58.0",
     "@types/fluent-ffmpeg": "^2.1.27",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "ajv": "^8.12.0",
     "classnames": "^2.5.1",
     "dotenv": "^16.3.1",
