--- a/package.json
+++ b/package.json
@@ -22,13 +22,22 @@
     "populate:words": "vite-node scripts/populate-words.ts",
     "populate:words:dry": "vite-node scripts/populate-words.ts --dry-run",
     "upload:lessons": "vite-node scripts/upload-lessons-to-storage.ts",
-    "upload:lessons:dry": "vite-node scripts/upload-lessons-to-storage.ts --dry-run"
+    "upload:lessons:dry": "vite-node scripts/upload-lessons-to-storage.ts --dry-run",
+    "build:capacitor": "CAPACITOR=true vite build",
+    "cap:sync": "npm run build:capacitor && npx cap sync",
+    "cap:ios": "npm run cap:sync && npx cap open ios",
+    "cap:android": "npm run cap:sync && npx cap open android",
+    "cap:run:ios": "npm run cap:sync && npx cap run ios",
+    "cap:run:android": "npm run cap:sync && npx cap run android"
   },
   "devDependencies": {
+    "@capacitor/assets": "^3.0.5",
+    "@capacitor/cli": "^7.4.4",
     "@flydotio/dockerfile": "^0.5.4",
     "@playwright/test": "^1.28.1",
     "@sveltejs/adapter-auto": "^3.0.0",
     "@sveltejs/adapter-node": "^5.0.1",
+    "@sveltejs/adapter-static": "^3.0.10",
     "@sveltejs/adapter-vercel": "^4.0.5",
     "@sveltejs/kit": "^2.5.27",
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
@@ -62,6 +71,14 @@
   "type": "module",
   "dependencies": {
     "@11labs/client": "^0.0.1",
+    "@capacitor/android": "^7.4.4",
+    "@capacitor/app": "^7.1.0",
+    "@capacitor/browser": "^7.0.2",
+    "@capacitor/core": "^7.4.4",
+    "@capacitor/ios": "^7.4.4",
+    "@capacitor/keyboard": "^7.0.3",
+    "@capacitor/splash-screen": "^7.0.3",
+    "@capacitor/status-bar": "^7.0.3",
     "@distube/ytdl-core": "^4.15.9",
     "@google/genai": "^1.29.1",
     "@google/generative-ai": "^0.24.1",
