--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "nodemailer": "^6.10.0",
     "perfect-freehand": "^1.2.2",
     "playht": "^0.9.8",
+    "redis": "^5.10.0",
     "resize-observer-polyfill": "^1.5.1",
     "stripe": "^16.6.0",
     "svelte-heatmap": "^1.0.2",
