--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "@capacitor/keyboard": "^7.0.3",
     "@capacitor/splash-screen": "^7.0.3",
     "@capacitor/status-bar": "^7.0.3",
-    "@distube/ytdl-core": "^4.15.9",
+    "@google-cloud/speech": "^7.2.1",
     "@google/genai": "^1.29.1",
     "@google/generative-ai": "^0.24.1",
     "@lucia-auth/adapter-sqlite": "^2.0.1",
@@ -98,6 +98,7 @@
     "export-to-csv": "^1.2.4",
     "fast-levenshtein": "^3.0.0",
     "fluent-ffmpeg": "^2.1.3",
+    "google-auth-library": "^10.5.0",
     "howler": "^2.2.4",
     "jsonrepair": "^3.13.1",
     "kysely": "^0.27.1",
