--- a/package.json
+++ b/package.json
@@ -98,11 +98,13 @@
     "export-to-csv": "^1.2.4",
     "fast-levenshtein": "^3.0.0",
     "fluent-ffmpeg": "^2.1.3",
+    "form-data": "^4.0.5",
     "google-auth-library": "^10.5.0",
     "howler": "^2.2.4",
     "jsonrepair": "^3.13.1",
     "kysely": "^0.27.1",
     "lucia": "^2.7.6",
+    "mailgun.js": "^12.7.0",
     "nodemailer": "^6.10.0",
     "perfect-freehand": "^1.2.2",
     "playht": "^0.9.8",
